--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,10 @@
     <item
         android:id="@+id/CA"
         android:title="CameraActivity"
-        android:orderInCategory="100" />
+        android:orderInCategory="200" />
+    <item
+        android:id="@+id/DBA"
+        android:title="DataBaseActivity"
+        android:orderInCategory="300" />
 
 </menu>
